# jaskNEM

./: .gitignore  AGENTS.md  CLAUDE.md  Constraint_Binding_Attribution.ipynb  Generator_Dispatch_Explorer.ipynb  Generator_Dispatch_Explorer_legacy.ipynb  Generator_Dispatch_Explorerv2.ipynb  Generator_Dispatch_Explorerv2.ipynb:Zone.Identifier  Interconnector_Flows.ipynb  Notebook 1.4.md  Notebook 1.5.md  Price Explorer.ipynb  Price_Spike_Autopsy.ipynb  build_market_price_reference.py  ideas.md  import_nem_data.py  importscript_readme.md  nem_data_guidance.md  pyproject.toml  readme.md  startup.md  test.ipynb
.jupyter/: cli.json
.tmp/: build_notebook_15.py  codex_build_notebook_15.py
.tmp/ipynb-notebook/: SKILL.md
.tmp/ipynb-notebook/references/: notebook-patterns.md
Market Research/: IGNORE Notebook 1.1 Marimo.py  IGNORE notebook1.1.py  Notebook 1.1 - Price Explorer.ipynb  Notebook 1.1 Marimo.py  Notebook 1.2 - Generator Dispatch Explorer.ipynb  Notebook 1.2b.ipynb  Notebook 1.3 - Price Spike Autopsy.ipynb  Notebook 1.3.md  Notebook 1.4 - Interconnector Flows.ipynb  Notebook 1.5 - Constraint Binding Attribution.ipynb
Simulation/: ToyModel.py  ToyModel2.py  pypsa_viz.py
Simulation/__marimo__/session/: ToyModel.py.json
data/nemosis_cache/: PUBLIC_DVD_DISPATCHPRICE_202312010000.parquet  PUBLIC_DVD_DISPATCHPRICE_202401010000.parquet  PUBLIC_DVD_DISPATCHPRICE_202402010000.parquet
docs/superpowers/plans/: 2026-04-01-n5-bess.md
docs/superpowers/specs/: 2026-04-01-n5-bess-design.md
