[project]
name = "jasknem"
version = "0.1.0"
description = "Analytics project on NEM data using PyPSA"
readme = "readme.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "highspy",
    "ipympl",
    "jupyter",
    "marimo>=0.21.1",
    "matplotlib",
    "nemosis==3.8.1",
    "notebook",
    "numpy<2",
    "pandas==3.0.1",
    "plotly",
    "polars",
    "pypsa",
]

[tool.uv]
package = false
